# first-python-project

./: README.md  main.py  pyproject.toml
src/first_python_project.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/fpp/: _init_.py  cli.py  config.py  log.py
tests/: tests_cli.py
