[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "first-python-project"
version = "0.1.0"
description = "Agentic Opportunity Scout - First Python Project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer[all]",
  "loguru",
  "pydantic-settings",
  "python-dotenv",
  "rich",
]

[project.scripts]
fpp = "fpp.cli:app"   # exposes `fpp` command via Typer app

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]
